--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -64,7 +64,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Login to Harbor Registry
-      run: docker login -u 'robot\$${{ secrets.HARBOR_USERNAME }}' -p ${{ secrets.HARBOR_PASSWORD }} containers.deltares.nl
+      run: docker login -u 'robot$${{ secrets.HARBOR_USERNAME }}' -p ${{ secrets.HARBOR_PASSWORD }} containers.deltares.nl
 
     - name: Make envfile
       uses: SpicyPizza/create-envfile@v1
